fix deprecated Long-related method.